--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,9 +1,11 @@
 <div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/admin">Home</a>
+          <a class="navbar-brand" href="/admin">
+            <img src="https://cdn-icons-png.flaticon.com/256/6676/6676508.png" height="40px">
+          </a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="container navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/admin/pessoas">Pessoas</a>
               </li>
